[package]
name = "polyku"
version = "0.1.0"
authors = ["rosensymmetri <o.berndal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "polyku_gen"
crate-type = ["cdylib"]

[dependencies]
rand = "0.7"
abstalg = "0.1"
num = "0.3"
itertools = "0.8"

[dependencies.pyo3]
version = "0.12"
features = ["extension-module"]